# yew_admin

./: .gitignore
app/: Cargo.toml  app.scss  index.html
app/src/: home.rs  main.rs  msg.rs  settings.rs
app/src/app/: context.rs  mod.rs  msg.rs  route.rs
app/src/app/components/: login.rs  menu.rs  mod.rs
app/src/app/components/sys1/: fn1001.rs  fn1002.rs  mod.rs
app/src/app/components/sys2/: mod.rs
app/src/app/home/: fn1.rs  mod.rs
app/src/app/settings/: mod.rs
app/src/components/: menu.rs  mod.rs
app/src/pages/: home.rs  settings.rs
app/src/util/: mod.rs
from_scope_derive/: Cargo.toml
from_scope_derive/src/: lib.rs
web/: Cargo.toml  mysql.sql
web/mysql/: mysql.sql
web/src/: config.rs  error.rs  main.rs
web/src/error/: mod.rs
web/src/web/: mod.rs  routes.rs
web/src/web/api/: crud.rs  menu.rs  mod.rs
web/web-derive/: Cargo.toml
web/web-derive/src/: lib.rs
