[package]
name = "app"
version = "0.1.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0"
wasm-bindgen = "0"
wee_alloc = "0"
log = "0"
wasm-logger = "0"
yew = "0"
yew-router = "0"
indextree = "4"
strum = {version="0", features=["derive"]}
#from_scope_derive = {path="../from_scope_derive"}