[package]
name = "app"
version = "0.1.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "*"
wasm-bindgen = "*"
log = "*"
wasm-logger = "*"
yew = { version = "*", features = ["csr"] }
yew-router = "*"
indextree = "*"
strum = { version = "*", features = ["derive"] }