[package]
name = "web"
version = "0.1.0"
authors = ["zoe <zoe211@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*" }
arc-swap = { version = "*" }
bigdecimal = { version = "*" }
toml = { version = "*" }
poem = { version = "*", features = ["compression", "cookie"] }
poem-openapi = { version = "*", features = ["swagger-ui"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
sqlx = { version = "*", features = ["mysql", "runtime-tokio-rustls", "time", "bigdecimal"] }
thiserror = { version = "*" }
time = { version = "*" }
tokio = { version = "*", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "*" }
tracing = { version = "*" }
tracing-appender = { version = "*" }
tracing-subscriber = { version = "*", features = ["local-time"] }
